@@ -1,3 +1,9 @@
+2007-05-14  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S: Remove unnecessary
+	extra cancellation test.
+	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S: Likewise.
+
 2007-05-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* descr.h (struct pthread): Rearrange members to fill hole in
