@@ -1,3 +1,13 @@
+2007-05-14  Ulrich Drepper  <drepper@redhat.com>
+
+	* version.h (VERSION): Define to 6.
+	* include/features.h (__GLIBC_MINOR__): Likewise.
+
+	* malloc/malloc.c: Use all small bin slots on 64-bit archs.
+
+	* malloc/malloc.c (largebin_index): Really have 32 buckets with 64
+	sizes.
+
 2007-05-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* malloc/malloc.c [MALLOC_DEBUG]: Keep track of current maximum
